--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,27 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: url('./images/wood.jpg');
+}
+
+li {
+  color: white;
+  border: 2px solid rgb(22,22,22);
+  list-style-type: none;
+  margin: 5px;
+  padding: 10px;
+  background: url('./images/wood.jpg');
+  width: 20%;
+}
+.display li {
+  width: 100%
+}
+
+button {
+  background: url('./images/wood.jpg');
+  padding: 10px 20px;
 }
