--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ input {
   background: rgba(22,22,22, 0.7);
   font-size: 17px;
   font-weight: 700;
-  color: white;
+  color: rgb(255, 174, 0);
   text-transform: none;
   width: 175px;
 }
@@ -86,6 +86,9 @@ input {
 .footer a {
   color: rgb(20, 236, 20);
   text-decoration: none;
+}
+.footer a:hover {
+  color: rgb(255, 174, 0);
 }
 
 @media screen and (max-width: 1400px) {
